# djangoAssignment

./: .gitignore  Makefile  README.md  docker-compose.yml
app-backend/: .env.template  Dockerfile  pyproject.toml  start.sh
app-backend/apps/core/: admin.py  api.py  handlers.py  models.py  schemas.py  tests.py  urls.py
app-backend/apps/core/migrations/: 0001_initial.py
app-backend/backend/: settings.py  urls.py  utils.py
